force-app/main/default/objects/CoffeeEvent__e/CoffeeEvent__e.object-meta.xml
<CustomObject>
    <label>CoffeeEvent</label>
    <pluralLabel>CoffeeEvents</pluralLabel>
</CustomObject>