force-app/main/default/objects/CoffeeEvent__e/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>error code</description>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>