force-app/main/default/objects/CoffeeEvent__e/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is it connected</description>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>