force-app/main/default/objects/CoffeeEvent__e/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>key</description>
    <label>SerialNumber</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>