force-app/main/default/objects/CoffeeEvent__e/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>temperature reading from the machine</description>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>